objects/qsyd_FE__FileExplorerFile__c.object
<CustomObject>
    <description>Store a hierarchical structure of content documents</description>
    <fields>
        <fullName>qsyd_FE__ContentDocumentId__c</fullName>
        <description>Content Document ID</description>
        <externalId>true</externalId>
        <label>Content Document Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qsyd_FE__ContentSize__c</fullName>
        <label>Content Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qsyd_FE__FileExtension__c</fullName>
        <description>File Extension</description>
        <inlineHelpText>File Extension</inlineHelpText>
        <label>File Extension</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qsyd_FE__FileOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Content Document Owner</description>
        <inlineHelpText>Content Document Owner</inlineHelpText>
        <label>File Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>File_Explorer_Files</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>qsyd_FE__FileType__c</fullName>
        <description>File Type</description>
        <inlineHelpText>File Type</inlineHelpText>
        <label>File Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qsyd_FE__Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>File folder</description>
        <inlineHelpText>File folder</inlineHelpText>
        <label>Folder</label>
        <referenceTo>qsyd_FE__FileExplorerFolder__c</referenceTo>
        <relationshipLabel>Files</relationshipLabel>
        <relationshipName>File_Explorer_Files</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>qsyd_FE__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deprecated.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qsyd_FE__Label__c</fullName>
        <description>File label</description>
        <externalId>true</externalId>
        <inlineHelpText>File label</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qsyd_FE__LinkedEntityId__c</fullName>
        <description>Linked Entity Id</description>
        <externalId>true</externalId>
        <label>Linked Entity Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qsyd_FE__Tags__c</fullName>
        <label>Tags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Passport</fullName>
                </value>
                <value>
                    <fullName>Validation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>File Explorer File</label>
    <listViews>
        <fullName>qsyd_FE__All</fullName>
        <columns>NAME</columns>
        <columns>qsyd_FE__ContentDocumentId__c</columns>
        <columns>qsyd_FE__Folder__c</columns>
        <columns>qsyd_FE__Tags__c</columns>
        <columns>qsyd_FE__Label__c</columns>
        <columns>qsyd_FE__FileType__c</columns>
        <columns>qsyd_FE__FileExtension__c</columns>
        <columns>qsyd_FE__FileOwner__c</columns>
        <columns>qsyd_FE__ContentSize__c</columns>
        <columns>qsyd_FE__LinkedEntityId__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>qsyd_FE__IsDeleted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FILEX-{0000000}</displayFormat>
        <label>File Explorer File Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Explorer Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>